Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88604

qsgrhisupport doesn't build with -no-opengl

    XMLWordPrintable

Details

    • b0f49c89780c7a1ce90b2c4e161bbba0d0beb868 (qt/qtdeclarative/dev) f725e2d6d8087db9d508c9795bcd0670d35f1032 (qt/qtdeclarative/6.0)

    Description

      agent:2020/11/18 08:25:21 build.go:379: g++ -c -include .pch/Qt6Quick -pipe -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -Wno-format-overflow -Wsuggest-override -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_QUICK_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I. -I../../include -I../../include/QtQuick -I../../include/QtQuick/6.0.0 -I../../include/QtQuick/6.0.0/QtQuick -I.tracegen -I../../include/QtQmlModels/6.0.0 -I../../include/QtQmlModels/6.0.0/QtQmlModels -I../../include/QtQml/6.0.0 -I../../include/QtQml/6.0.0/QtQml -I../../include/QtQmlModels -I../../include/QtQml -I/home/qt/work/install/include/QtGui/6.0.0 -I/home/qt/work/install/include/QtGui/6.0.0/QtGui -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qsgdefaultglyphnode.o scenegraph/qsgdefaultglyphnode.cpp
      agent:2020/11/18 08:25:23 build.go:379: scenegraph/qsgrhisupport.cpp: In member function ‘QRhi* QSGRhiSupport::createRhi(QQuickWindow*, QOffscreenSurface*)’:
      agent:2020/11/18 08:25:23 build.go:379: scenegraph/qsgrhisupport.cpp:567:46: error: unused parameter ‘window’ [-Werror=unused-parameter]
      agent:2020/11/18 08:25:23 build.go:379:   567 | QRhi *QSGRhiSupport::createRhi(QQuickWindow *window, QOffscreenSurface *offscreenSurface)
      agent:2020/11/18 08:25:23 build.go:379:       |                                ~~~~~~~~~~~~~~^~~~~~
      

      @ https://testresults.qt.io/logs/qt/qtdeclarative/d2e3e94f2c7775157d977b4e833083217c67e5fb/LinuxUbuntu_20_04x86_64LinuxUbuntu_20_04x86_64GCCqtci-linux-Ubuntu-20.04-x86_64-50-9be9a0DisableTests_UseLegacyInstructions/94b720f9edbbb7f8d18395f0320360135476baef/build_1605686648/log.txt.gz

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-88604
          # Subject Branch Project Status CR V

          Activity

            People

              lagocs Laszlo Agocs
              tosaraja Tony Sarajärvi
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes